# ShaderApp

./: CMakeLists.txt  imagewidget.cpp  imagewidget.h  inspectwindow.cpp  inspectwindow.h  inspectwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shaderlistwindow.cpp  shaderlistwindow.h  shaderlistwindow.ui  shaderselectitem.cpp  shaderselectitem.h  shaderselectitem.ui
fragmentshaders/: Negative.txt
models/: shaderlistmodel.h  shadermodel.h
utils/: filehelper.cpp  filehelper.h  modeldeserializer.cpp  modeldeserializer.h  modelserialization.cpp  modelserialization.h
windows/: shaderlistwindow.h
